part-2/2.03/manifests-pingpong/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping
  namespace: exercises
spec:
  selector:
    app: ping
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
